start styling (8 elements)

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <title>Welcome to My Page!</title>
     <!-- 5: metadata -->
     <meta charset="utf-8">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <!-- 6: body of doc -->
 
 <body>
     <!-- 7: define section -->
-    <div>
+    <div class="index-top-section">
         <!-- 8: name of page -->
-        <h1>Welcome to My Page!</h1>
+        <h1 class="welcome-header">Welcome to My Page!</h1>
 
         <!-- 9: display navigation link(s) -->
         <nav>
@@ -42,7 +43,7 @@
         <button name="test" type="button">Press me for good luck!</button>
 
         <!-- 17: About Me section -->
-        <section id="About-Me">
+        <div class="about-me">
             <!-- header -->
             <h2>About Me</h2>
             <!-- 18, 19: paragraph about me, bold name to emphasize -->
@@ -52,10 +53,11 @@
                 and I realized that a university campus is so much larger and nicer in comparison<br>
                 to a community college one!<br>
             </p>
-        </section>
+            </section>
+        </div>
 
         <!-- Hobbies section -->
-        <section id="Hobbies">
+        <div class="hobbies">
             <!-- header -->
             <h2>Hobbies</h2>
 
@@ -87,7 +89,7 @@
                 and rap. Lastly, I've been learning Japanese for about a year now and I've been<br>
                 really enjoying it. My end goal is to be fluent and hopefully visit Japan one day!<br>
             </p>
-        </section>
+        </div>
     </main>
 
     <!-- border -->
