--- a/index.html
+++ b/index.html
@@ -18,17 +18,21 @@
 <body>
     <!-- 7: define section -->
     <div class="index-top-section">
-        <!-- 8: name of page -->
-        <h1 class="welcome-header">Welcome to My Page!</h1>
-
         <!-- 9: display navigation link(s) -->
         <nav class="more-about-me-link">
             <!-- 10: unordered list for hyperlink(s) -->
-
-            <!-- 11, 12: display hyperlink(s) as element of the ul -->
-            <a href="secondpage.html"> More About Me</a>
+            <ul class="links">
+                <li>
+                    <!-- 11, 12: display hyperlink(s) as element of the ul -->
+                    <a href="secondpage.html"> More About Me</a>
+                </li>
+            </ul>
 
         </nav>
+        <!-- 8: name of page -->
+        <h1 class="welcome-header">Welcome to My Page!</h1>
+
+
     </div>
 
     <!-- 13: line break -->
@@ -50,10 +54,11 @@
                 <h2 class="about-me-header">About Me</h2>
                 <!-- 18, 19: paragraph about me, bold name to emphasize -->
                 <p class="about-me-paragraph">
-                    Welcome to my page! My name is <strong>Kevin Ponting</strong> and currently I am a third year<br>
-                    computer science student at a university. I transferred from a community college<br>
-                    and I realized that a university campus is so much larger and nicer in comparison<br>
-                    to a community college one!<br>
+                    Welcome to my page! My name is <strong>Kevin Ponting</strong> and I am part Venezuelan<br>
+                    Filipino, and Japanese. Currently I am a third year computer science student at a university.<br>
+                    I transferred from a community college and I realized that a university campus is so much<br>
+                    larger and nicer in comparison to a community college one. I look forward continuing my<br>
+                    education and furthering my knowledge in this field!
                 </p>
             </div>
 
@@ -64,10 +69,12 @@
 
         <!-- Hobbies section -->
         <div class="hobbies-section">
+            <img src="terraria.png" alt="Terraria logo." class="terraria">
+
+
             <div class="hobbies-hdr-para">
                 <!-- header -->
                 <h2>Hobbies</h2>
-
                 <!-- 20: tab that can be open and closed -->
                 <details>
                     <!-- 21: display name of tab -->
