--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="about-me-section">
             <div class="about-me-hdr-para">
                 <!-- header -->
-                <h2 class="about-me-header">About Me</h2>
+                <h2 class="header">About Me</h2>
                 <!-- 18, 19: paragraph about me, bold name to emphasize -->
                 <p class="about-me-paragraph">
                     Welcome to my page! My name is <strong>Kevin Ponting</strong> and I am part Venezuelan<br>
@@ -69,12 +69,14 @@
 
         <!-- Hobbies section -->
         <div class="hobbies-section">
-            <img src="terraria.png" alt="Terraria logo." class="terraria">
+            <figure class="hobby-pics">
+                <img src="basketball.jpg" alt="picture of a basketball" class="bball">
 
+            </figure>
 
             <div class="hobbies-hdr-para">
                 <!-- header -->
-                <h2>Hobbies</h2>
+                <h2 class="header">Hobbies</h2>
                 <!-- 20: tab that can be open and closed -->
                 <details>
                     <!-- 21: display name of tab -->
@@ -103,6 +105,8 @@
                     and rap. Lastly, I've been learning Japanese for about a year now and I've been<br>
                     really enjoying it. My end goal is to be fluent and hopefully visit Japan one day!<br>
                 </p>
+
+
             </div>
 
         </div>
