--- a/index.html
+++ b/index.html
@@ -31,22 +31,13 @@
         </nav>
         <!-- 8: name of page -->
         <h1 class="welcome-header">Welcome to My Page!</h1>
-
-
     </div>
 
     <!-- 13: line break -->
     <br>
 
-
-
     <!-- 15: main content of page -->
     <main>
-
-        <!-- 16: button 
-        <button name="test" type="button">Press me for good luck!</button> -->
-
-
         <!-- 17: About Me section -->
         <div class="about-me-section">
             <div class="about-me-hdr-para">
@@ -63,15 +54,12 @@
             </div>
 
             <img class="pic-of-me" src="pic_of_me.jpg" alt="A picture of me.">
-
         </div>
-
 
         <!-- Hobbies section -->
         <div class="hobbies-section">
             <figure class="hobby-pics">
-                <img src="basketball.jpg" alt="picture of a basketball" class="bball">
-
+                <img src="basketball.jpg" alt="picture of a basketball" class="pic">
             </figure>
 
             <div class="hobbies-hdr-para">
@@ -95,7 +83,7 @@
                 <!-- paragraph about hobbies -->
                 <p>
                     Above are a list of my many hobbies! I have only been playing basketball since<br>
-                    middle school, but it has positively affected my life in many ways. Honestly, I<br>
+                    middle school, but it is defintely my favorite hobby out of the list. Honestly, I<br>
                     only picked up lifting as a hobby because I wanted to be stronger for basketball.<br>
                     On the other hand, video games have always been apart of my life ever since I was<br>
                     a kid. I used to only play multiplayer games such as Call of Duty and NBA 2K but<br>
@@ -105,9 +93,8 @@
                     and rap. Lastly, I've been learning Japanese for about a year now and I've been<br>
                     really enjoying it. My end goal is to be fluent and hopefully visit Japan one day!<br>
                 </p>
-
-
             </div>
+
 
         </div>
     </main>
