added some animations

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </p>
             </div>
 
-            <img class="pic-of-me" src="pic_of_me.jpg" alt="A picture of me.">
+            <img class="pic" src="pic_of_me.jpg" alt="A picture of me.">
         </div>
 
         <!-- Hobbies section -->
