--- a/index.html
+++ b/index.html
@@ -16,19 +16,15 @@
 <!-- 6: body of doc -->
 
 <body>
+    <!-- 10: unordered list for hyperlink(s) -->
+    <ul class="nav-bar">
+        <li class="link1">
+            <!-- 11, 12: display hyperlink(s) as element of the ul -->
+            <a href="secondpage.html" class="link-text"> More About Me</a>
+        </li>
+    </ul>
     <!-- 7: define section -->
     <div class="index-top-section">
-        <!-- 9: display navigation link(s) -->
-        <nav class="more-about-me-link">
-            <!-- 10: unordered list for hyperlink(s) -->
-            <ul class="links">
-                <li>
-                    <!-- 11, 12: display hyperlink(s) as element of the ul -->
-                    <a href="secondpage.html"> More About Me</a>
-                </li>
-            </ul>
-
-        </nav>
         <!-- 8: name of page -->
         <h1 class="welcome-header">Welcome to My Page!</h1>
     </div>
@@ -46,7 +42,8 @@
                 <!-- 18, 19: paragraph about me, bold name to emphasize -->
                 <p class="about-me-paragraph">
                     Welcome to my page! My name is <strong>Kevin Ponting</strong> and I am part Venezuelan<br>
-                    Filipino, and Japanese. Currently I am a third year computer science student at a university.<br>
+                    Filipino, and Japanese. Currently I am a third year computer science student at a
+                    university.<br>
                     I transferred from a community college and I realized that a university campus is so much<br>
                     larger and nicer in comparison to a community college one. I look forward continuing my<br>
                     education and furthering my knowledge in this field!
@@ -58,19 +55,19 @@
 
         <!-- Hobbies section -->
         <div class="hobbies-section">
-            <figure class="hobby-pics">
+            <figure>
                 <img src="basketball.jpg" alt="picture of a basketball" class="pic">
             </figure>
 
-            <div class="hobbies-hdr-para">
+            <div class="hobbies-headr-paragraph">
                 <!-- header -->
                 <h2 class="header">Hobbies</h2>
                 <!-- 20: tab that can be open and closed -->
-                <details>
+                <details class="hobbies-list-tab">
                     <!-- 21: display name of tab -->
                     <summary>My List of Hobbies</summary>
                     <!-- unordered list for hobbies -->
-                    <ul>
+                    <ul class="hobbies-list">
                         <!-- list of hobbies -->
                         <li>basketball</li>
                         <li>video games</li>
@@ -94,11 +91,8 @@
                     really enjoying it. My end goal is to be fluent and hopefully visit Japan one day!<br>
                 </p>
             </div>
-
-
         </div>
     </main>
-
 
     <!-- 22: footer section -->
     <footer>
