started second page styling

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <body>
     <!-- 10: unordered list for hyperlink(s) -->
-    <ul class="nav-bar">
-        <li class="link1">
+    <ul class="index-nav-bar">
+        <li class="index-link">
             <!-- 11, 12: display hyperlink(s) as element of the ul -->
-            <a href="secondpage.html" class="link-text"> More About Me</a>
+            <a href="secondpage.html" class="index-link-text"> More About Me</a>
         </li>
     </ul>
     <!-- 7: define section -->
-    <div class="index-top-section">
+    <div class="top-section">
         <!-- 8: name of page -->
         <h1 class="welcome-header">Welcome to My Page!</h1>
     </div>
