--- a/secondpage.html
+++ b/secondpage.html
@@ -9,23 +9,25 @@
     <title>More About Me</title>
     <!-- metadata -->
     <meta charset="utf-8">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <!-- body of doc -->
 
 <body>
+    <!-- unordered list -->
+    <ul class="secondpage-nav-bar">
+        <!-- define hyperlink(s) as element of ul -->
+        <li class="secondpage-link"><a href="index.html" class="secondpage-link-text"> Welcome to My Page!</a></li>
+    </ul>
     <!-- define section -->
     <div>
         <!-- title of page -->
         <h1>More About Me</h1>
         <!-- display navigation link(s) -->
-        <nav>
-            <!-- unordered list -->
-            <ul>
-                <!-- define hyperlink(s) as element of ul -->
-                <li><a href="index.html"> Welcome to My Page!</a></li>
-            </ul>
-        </nav>
+
+
+
     </div>
 
     <!-- line break -->
