--- a/secondpage.html
+++ b/secondpage.html
@@ -24,59 +24,54 @@
     <div>
         <!-- title of page -->
         <h1>More About Me</h1>
-        <!-- display navigation link(s) -->
-
-
-
     </div>
 
     <!-- line break -->
     <br>
 
-    <!-- border -->
-    <hr>
 
     <!-- main content of page -->
     <main>
         <!-- Basketball section -->
-        <section id="Basketball">
-            <!-- header -->
-            <h2>Basketball</h2>
-            <!-- paragraph about basketball -->
-            <p>
-                Basketball has been a crucial part of my life and is my favorite hobby.<br>
-                So, I think it deserves a dedicated section! Personally, I think it is<br>
-                the best sport in the world and provides a fun way of staying active.<br>
-                I've been told by friends and family that I play like Paul George. However,<br>
-                not only do I like playing baskebtall, but I also like watching it. I always<br>
-                try to watch every NBA game since it's amazing to see how good professionals<br>
-                are. When it comes to my favorite players, I have way too many as each of them<br>
-                have a unique skillset and playstyle. I hope to keep playing basketball for as<br>
-                long as my body can handle it, but even when the time comes when I have to put<br>
-                down the ball for good, at least I'll be able to watch NBA games!
-            </p>
-
-            <!-- 23: team logos -->
-            <figure>
-                <!-- 24: images of team logos -->
-                <img src="miami-heat.png" alt="Logo of the Miami Heat" width=100>
-                <img src="Los-angeles-lakers.png" alt="Logo of the Los Angeles Lakers" width=100>
-                <!-- 25: caption for images -->
-                <figcaption>
-                    My two favorite teams, the Miami Heat and Los Angeles Lakers.<br>
-                </figcaption>
+        <div class="basketball-section">
+            <figure class="heat-logo">
+                <img src="miami-heat.png" class="heat">
             </figure>
+            <div class="basketball-section-header-paragraph">
+                <!-- header -->
+                <h2>Basketball</h2>
+                <!-- paragraph about basketball -->
+                <p>
+                    Basketball has been a crucial part of my life and is my favorite hobby.
+                    So, I think it deserves a dedicated section! Personally, I think it is
+                    the best sport in the world and provides a fun way of staying active.
+                    I've been told by friends and family that I play like Paul George. However,
+                    not only do I like playing baskebtall, but I also like watching it. I always
+                    try to watch every NBA game since it's amazing to see how good professionals
+                    are. When it comes to my favorite players, I have way too many as each of them
+                    have a unique skillset and playstyle. I hope to keep playing basketball for as
+                    long as my body can handle it, but even when the time comes when I have to put
+                    down the ball for good, at least I'll be able to watch NBA games!
+                </p>
 
-            <!-- video -->
+            </div>
+            <figure class="laker-logo">
+                <img src="Los-angeles-lakers.png" alt="">
+            </figure>
+        </div>
+
+        <!-- 23: team logos -->
+        <!-- 24: images of team logos -->
+
+
+        <div>
             <figure>
                 <!-- 26: embed vid -->
                 <object width="300" height="200"
                     data="https://www.youtube.com/embed/Tfsh-7NdpKs?si=e4MyHZz-5etAQrCy"></object>
                 <br>
                 <!-- caption for vid -->
-                <figcaption>
-                    Highlights of Paul George.<br>
-                </figcaption>
+
             </figure>
 
             <!-- list -->
@@ -95,7 +90,10 @@
                     My top five favorite players.
                 </figcaption>
             </figure>
-        </section>
+            </section>
+        </div>
+        <!-- video -->
+
 
         <!-- timeline section -->
         <section id="timeline">
