basketball section done need more elements

--- a/secondpage.html
+++ b/secondpage.html
@@ -46,57 +46,45 @@
                     So, I think it deserves a dedicated section! Personally, I think it is
                     the best sport in the world and provides a fun way of staying active.
                     I've been told by friends and family that I play like Paul George. However,
-                    not only do I like playing baskebtall, but I also like watching it. I always
-                    try to watch every NBA game since it's amazing to see how good professionals
-                    are. When it comes to my favorite players, I have way too many as each of them
-                    have a unique skillset and playstyle. I hope to keep playing basketball for as
-                    long as my body can handle it, but even when the time comes when I have to put
-                    down the ball for good, at least I'll be able to watch NBA games!
+                    not only do I like playing basketball, but I also like watching it. I try
+                    to watch every game of my two favorite teams, the Miami Heat and the Los
+                    Angeles Lakers. When it comes to my favorite players, I have way too many
+                    as each of them have a unique skillset and playstyle, but Kobe Bryant is
+                    the player that got me interested in basketball. I hope to keep playing
+                    basketball for as long as my body can handle it, but even when the time
+                    comes when I have to put down the ball for good, at least I'll be able to
+                    watch NBA games!
                 </p>
 
             </div>
-            <figure class="laker-logo">
-                <img src="Los-angeles-lakers.png" alt="">
+            <figure class="lakers-logo">
+                <img src="Los-angeles-lakers.png" class="lakers">
             </figure>
+
+
         </div>
 
-        <!-- 23: team logos -->
-        <!-- 24: images of team logos -->
 
 
-        <div>
-            <figure>
+
+        <div class="vid-section">
+
+            <figure class="vid">
                 <!-- 26: embed vid -->
-                <object width="300" height="200"
-                    data="https://www.youtube.com/embed/Tfsh-7NdpKs?si=e4MyHZz-5etAQrCy"></object>
-                <br>
-                <!-- caption for vid -->
+                <iframe width="660" height="415" src="https://www.youtube.com/embed/hHRxUHfHeoY?si=cIgtj5Dm7U_YDen8"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
 
             </figure>
 
-            <!-- list -->
-            <figure>
-                <!-- 27: ordered list -->
-                <ol>
-                    <!-- list fav players -->
-                    <li>Kobe Bryant</li>
-                    <li>Jimmy Butler</li>
-                    <li>Kevin Durant</li>
-                    <li>Stephen Curry</li>
-                    <li>Anthony Edwards</li>
-                </ol>
-                <!-- caption for list -->
-                <figcaption>
-                    My top five favorite players.
-                </figcaption>
-            </figure>
-            </section>
+
+
         </div>
-        <!-- video -->
 
 
         <!-- timeline section -->
-        <section id="timeline">
+        <div class="timeline">
             <!-- header -->
             <h2>My Timeline</h2>
 
@@ -121,7 +109,7 @@
                     <td>Continue my journey in the field of Computer Science.</td>
                 </tr>
             </table>
-        </section>
+        </div>
 
         <!-- Comments section -->
         <section id="Comments">
