--- a/secondpage.html
+++ b/secondpage.html
@@ -77,39 +77,56 @@
                     allowfullscreen></iframe>
 
             </figure>
-
-
-
         </div>
 
-
-        <!-- timeline section -->
-        <div class="timeline">
-            <!-- header -->
+        <div class="timeline-section">
             <h2>My Timeline</h2>
-
-            <!-- 28: table -->
-            <table>
-                <!-- 29: row 1 -->
-                <tr>
-                    <!-- 30, 31: 5 header cells for years, italicize years -->
-                    <th><em>2000</em></th>
-                    <th><em>2019</em></th>
-                    <th><em>2021</em></th>
-                    <th><em>2023</em></th>
-                    <th><em>2024 and onward</em></th>
-                </tr>
-                <!-- row 2 -->
-                <tr>
-                    <!-- 32: 5 cells for descriptions -->
-                    <td>Born and raised in California.</td>
-                    <td>Started attending community college as a kinesiology major.</td>
-                    <td>Changed my major to Computer Science.</td>
-                    <td>Transferred to university.</td>
-                    <td>Continue my journey in the field of Computer Science.</td>
-                </tr>
-            </table>
+            <div class="timeline">
+                <div class="text-box">
+                    <div class="content">
+                        <div class="date">2000</div>
+                        <div class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ultrices justo.
+                        </div>
+                    </div>
+                </div>
+                <div class="text-box">
+                    <div class="content">
+                        <div class="date">2019</div>
+                        <div class="description">
+                            Integer in velit auctor, efficitur odio at, scelerisque felis.
+                        </div>
+                    </div>
+                </div>
+                <div class="text-box">
+                    <div class="content">
+                        <div class="date">2021</div>
+                        <div class="description">
+                            Sed quis tellus vel odio iaculis mattis eu nec dui.
+                        </div>
+                    </div>
+                </div>
+                <div class="text-box">
+                    <div class="content">
+                        <div class="date">2023</div>
+                        <div class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ultrices justo.
+                        </div>
+                    </div>
+                </div>
+                <div class="text-box">
+                    <div class="content">
+                        <div class="date">2024 and Onwards</div>
+                        <div class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ultrices justo.
+                        </div>
+                    </div>
+                </div>
+                <div class="continuation-arrow"></div>
+            </div>
         </div>
+
+
 
         <!-- Comments section -->
         <section id="Comments">
@@ -134,6 +151,27 @@
                 <!-- email address -->
                 Contact:<a href="AnEmail@email.com">AnEmail@email.com</a>
             </address>
+            <!-- 28: table -->
+            <table>
+                <!-- 29: row 1 -->
+                <tr>
+                    <!-- 30, 31: 5 header cells for years, italicize years -->
+                    <th><em>2000</em></th>
+                    <th><em>2019</em></th>
+                    <th><em>2021</em></th>
+                    <th><em>2023</em></th>
+                    <th><em>2024 and onward</em></th>
+                </tr>
+                <!-- row 2 -->
+                <tr>
+                    <!-- 32: 5 cells for descriptions -->
+                    <td>Born and raised in California.</td>
+                    <td>Started attending community college as a kinesiology major.</td>
+                    <td>Changed my major to Computer Science.</td>
+                    <td>Transferred to university.</td>
+                    <td>Continue my journey in the field of Computer Science.</td>
+                </tr>
+            </table>
         </section>
     </main>
 
