--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 
 <body>
     <!-- 10: unordered list for hyperlink(s) -->
-    <ul class="index-nav-bar">
-        <li class="index-link">
+    <ul class="nav-bar">
+
+        <li class="link">
             <!-- 11, 12: display hyperlink(s) as element of the ul -->
-            <a href="secondpage.html" class="index-link-text"> More About Me</a>
+            <a href="secondpage.html" class="text"> More About Me</a>
         </li>
+        <h2 class="Kevin">Kev<span>in</span></h2>
     </ul>
     <!-- 7: define section -->
     <div class="top-section">
