--- a/secondpage.html
+++ b/secondpage.html
@@ -56,6 +56,14 @@
                     watch NBA games!
                 </p>
 
+                <figure class="vid">
+                    <!-- 26: embed vid -->
+                    <iframe width="660" height="415" src="https://www.youtube.com/embed/hHRxUHfHeoY?si=cIgtj5Dm7U_YDen8"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+
+                </figure>
             </div>
             <figure class="lakers-logo">
                 <img src="Los-angeles-lakers.png" class="lakers">
@@ -67,62 +75,41 @@
 
 
 
-        <div class="vid-section">
 
-            <figure class="vid">
-                <!-- 26: embed vid -->
-                <iframe width="660" height="415" src="https://www.youtube.com/embed/hHRxUHfHeoY?si=cIgtj5Dm7U_YDen8"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-
-            </figure>
-        </div>
 
         <div class="timeline-section">
             <h2>My Timeline</h2>
             <div class="timeline">
                 <div class="text-box">
-                    <div class="content">
-                        <div class="date">2000</div>
-                        <div class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ultrices justo.
-                        </div>
-                    </div>
+                    <div class="date">2000</div>
+                    <div class="description">
+                        Born and raised in California. </div>
                 </div>
+
                 <div class="text-box">
-                    <div class="content">
-                        <div class="date">2019</div>
-                        <div class="description">
-                            Integer in velit auctor, efficitur odio at, scelerisque felis.
-                        </div>
-                    </div>
+                    <div class="date">2019</div>
+                    <div class="description">
+                        Started attending community college as a Kinesiology major. </div>
                 </div>
+
                 <div class="text-box">
-                    <div class="content">
-                        <div class="date">2021</div>
-                        <div class="description">
-                            Sed quis tellus vel odio iaculis mattis eu nec dui.
-                        </div>
-                    </div>
+                    <div class="date">2021</div>
+                    <div class="description">
+                        Changed my major to Computer Science. </div>
                 </div>
+
                 <div class="text-box">
-                    <div class="content">
-                        <div class="date">2023</div>
-                        <div class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ultrices justo.
-                        </div>
-                    </div>
+                    <div class="date">2023</div>
+                    <div class="description">
+                        Transferred to university. </div>
                 </div>
+
                 <div class="text-box">
-                    <div class="content">
-                        <div class="date">2024 and Onwards</div>
-                        <div class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at ultrices justo.
-                        </div>
-                    </div>
+                    <div class="date">2024 and Onwards</div>
+                    <div class="description">
+                        Continue my journey in the field of Computer Science. </div>
                 </div>
-                <div class="continuation-arrow"></div>
+                <div class="arrow"></div>
             </div>
         </div>
 
@@ -152,31 +139,9 @@
                 Contact:<a href="AnEmail@email.com">AnEmail@email.com</a>
             </address>
             <!-- 28: table -->
-            <table>
-                <!-- 29: row 1 -->
-                <tr>
-                    <!-- 30, 31: 5 header cells for years, italicize years -->
-                    <th><em>2000</em></th>
-                    <th><em>2019</em></th>
-                    <th><em>2021</em></th>
-                    <th><em>2023</em></th>
-                    <th><em>2024 and onward</em></th>
-                </tr>
-                <!-- row 2 -->
-                <tr>
-                    <!-- 32: 5 cells for descriptions -->
-                    <td>Born and raised in California.</td>
-                    <td>Started attending community college as a kinesiology major.</td>
-                    <td>Changed my major to Computer Science.</td>
-                    <td>Transferred to university.</td>
-                    <td>Continue my journey in the field of Computer Science.</td>
-                </tr>
-            </table>
+
         </section>
     </main>
-
-    <!-- border -->
-    <hr>
 
     <!-- footer -->
     <footer>
