--- a/secondpage.html
+++ b/secondpage.html
@@ -16,19 +16,20 @@
 
 <body>
     <!-- unordered list -->
-    <ul class="secondpage-nav-bar">
+    <ul class="nav-bar">
         <!-- define hyperlink(s) as element of ul -->
-        <li class="secondpage-link"><a href="index.html" class="secondpage-link-text"> Welcome to My Page!</a></li>
+        <li class="link"><a href="index.html" class="text"> Welcome to My Page!</a></li>
+        <h2 class="Kevin">Kev<span>in</span></h2>
     </ul>
+
     <!-- define section -->
-    <div>
+    <div class="top-section">
         <!-- title of page -->
         <h1>More About Me</h1>
     </div>
 
     <!-- line break -->
     <br>
-
 
     <!-- main content of page -->
     <main>
