improved top section and nav bar

--- a/index.html
+++ b/index.html
@@ -16,15 +16,20 @@
 <!-- 6: body of doc -->
 
 <body>
-    <!-- 10: unordered list for hyperlink(s) -->
-    <ul class="nav-bar">
-
-        <li class="link">
-            <!-- 11, 12: display hyperlink(s) as element of the ul -->
-            <a href="secondpage.html" class="text"> More About Me</a>
-        </li>
+    <div class="top">
         <h2 class="Kevin">Kev<span>in</span></h2>
-    </ul>
+    </div>
+    <nav>
+        <ul class="nav-bar">
+
+            <li class="list">
+                <!-- 11, 12: display hyperlink(s) as element of the ul -->
+                <a href="secondpage.html" class="text"> More About Me</a>
+            </li>
+        </ul>
+    </nav>
+    <!-- 10: unordered list for hyperlink(s) -->
+
     <!-- 7: define section -->
     <div class="top-section">
         <!-- 8: name of page -->
