--- a/secondpage.html
+++ b/secondpage.html
@@ -15,13 +15,18 @@
 <!-- body of doc -->
 
 <body>
-    <!-- unordered list -->
-    <ul class="nav-bar">
-        <!-- define hyperlink(s) as element of ul -->
-        <li class="link"><a href="index.html" class="text"> Welcome to My Page!</a></li>
+    <div class="top">
         <h2 class="Kevin">Kev<span>in</span></h2>
-    </ul>
+    </div>
+    <nav>
+        <ul class="nav-bar">
 
+            <li class="list">
+                <!-- 11, 12: display hyperlink(s) as element of the ul -->
+                <a href="index.html" class="text"> Welcome to My Page!</a>
+            </li>
+        </ul>
+    </nav>
     <!-- define section -->
     <div class="top-section">
         <!-- title of page -->
@@ -73,11 +78,6 @@
 
         </div>
 
-
-
-
-
-
         <div class="timeline-section">
             <h2>My Timeline</h2>
             <div class="timeline">
@@ -113,35 +113,6 @@
                 <div class="arrow"></div>
             </div>
         </div>
-
-
-
-        <!-- Comments section -->
-        <section id="Comments">
-            <!-- header -->
-            <h2>Comments</h2>
-            <p>Please feel free to tell me what you think I can do to improve my page!</p>
-
-            <!-- 33: form for user input -->
-            <form>
-                <!-- 34: accept input -->
-                <input type="text" id="comments" name="comments">
-            </form>
-        </section>
-
-        <!-- Contact Info section -->
-        <section id="Contact-Info">
-            <!-- header -->
-            <h2>Contact Info</h2>
-
-            <!-- 35: contact info -->
-            <address>
-                <!-- email address -->
-                Contact:<a href="AnEmail@email.com">AnEmail@email.com</a>
-            </address>
-            <!-- 28: table -->
-
-        </section>
     </main>
 
     <!-- footer -->
