--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
 <!-- 6: body of doc -->
 
 <body>
-    <div class="top">
+    <div class="logo-section">
         <h2 class="Kevin">Kev<span>in</span></h2>
     </div>
-    <nav>
-        <ul class="nav-bar">
 
+    <nav>
+        <!-- 10: unordered list for hyperlink(s) -->
+        <ul class="nav-bar">
             <li class="list">
                 <!-- 11, 12: display hyperlink(s) as element of the ul -->
                 <a href="secondpage.html" class="text"> More About Me</a>
             </li>
         </ul>
     </nav>
-    <!-- 10: unordered list for hyperlink(s) -->
 
     <!-- 7: define section -->
-    <div class="top-section">
+    <div class="title-section">
         <!-- 8: name of page -->
-        <h1 class="welcome-header">Welcome to My Page!</h1>
+        <h1 class="title">Welcome to My Page!</h1>
     </div>
 
     <!-- 13: line break -->
@@ -43,32 +43,32 @@
     <main>
         <!-- 17: About Me section -->
         <div class="about-me-section">
-            <div class="about-me-hdr-para">
+            <div class="about-me-header-paragraph">
                 <!-- header -->
-                <h2 class="header">About Me</h2>
+                <h2>About Me</h2>
                 <!-- 18, 19: paragraph about me, bold name to emphasize -->
-                <p class="about-me-paragraph">
-                    Welcome to my page! My name is <strong>Kevin Ponting</strong> and I am part Venezuelan<br>
+                <p>
+                    Welcome to my page! My name is <strong>Kevin Ponting</strong> and I am part Venezuelan
                     Filipino, and Japanese. Currently I am a third year computer science student at a
-                    university.<br>
-                    I transferred from a community college and I realized that a university campus is so much<br>
-                    larger and nicer in comparison to a community college one. I look forward continuing my<br>
-                    education and furthering my knowledge in this field!
+                    university.I transferred from a community college and I realized that a university
+                    campus is so much larger and nicer in comparison to a community college one. I look
+                    forward continuing my education and furthering my knowledge in this field!
                 </p>
             </div>
 
-            <img class="pic" src="pic_of_me.jpg" alt="A picture of me.">
+            <img class="pic-me" src="pic_of_me.jpg" alt="A picture of me.">
         </div>
 
         <!-- Hobbies section -->
         <div class="hobbies-section">
             <figure>
-                <img src="basketball.jpg" alt="picture of a basketball" class="pic">
+                <img src="basketball.jpg" alt="picture of a basketball" class="pic-basketball">
             </figure>
 
-            <div class="hobbies-headr-paragraph">
+            <div class="hobbies-header-list-paragraph">
                 <!-- header -->
-                <h2 class="header">Hobbies</h2>
+                <h2>Hobbies</h2>
+
                 <!-- 20: tab that can be open and closed -->
                 <details class="hobbies-list-tab">
                     <!-- 21: display name of tab -->
@@ -86,16 +86,16 @@
 
                 <!-- paragraph about hobbies -->
                 <p>
-                    Above are a list of my many hobbies! I have only been playing basketball since<br>
-                    middle school, but it is defintely my favorite hobby out of the list. Honestly, I<br>
-                    only picked up lifting as a hobby because I wanted to be stronger for basketball.<br>
-                    On the other hand, video games have always been apart of my life ever since I was<br>
-                    a kid. I used to only play multiplayer games such as Call of Duty and NBA 2K but<br>
-                    recently I've only been playing single player games. As for my favorite games,<br>
-                    Terraria and Omori are my top two. Next, I love listening to music. Music helps<br>
-                    me focus and makes anything I'm doing fun. My favorite genres are K-Pop, J-Pop,<br>
-                    and rap. Lastly, I've been learning Japanese for about a year now and I've been<br>
-                    really enjoying it. My end goal is to be fluent and hopefully visit Japan one day!<br>
+                    Above are a list of my many hobbies! I have only been playing basketball since
+                    middle school, but it is defintely my favorite hobby out of the list. Honestly, I
+                    only picked up lifting as a hobby because I wanted to be stronger for basketball.
+                    On the other hand, video games have always been apart of my life ever since I was
+                    a kid. I used to only play multiplayer games such as Call of Duty and NBA 2K but
+                    recently I've only been playing single player games. As for my favorite games,
+                    Terraria and Omori are my top two. Next, I love listening to music. Music helps
+                    me focus and makes anything I'm doing fun. My favorite genres are K-Pop, J-Pop,
+                    and rap. Lastly, I've been learning Japanese for about a year now and I've been
+                    really enjoying it. My end goal is to be fluent and hopefully visit Japan one day!
                 </p>
             </div>
         </div>
