--- a/secondpage.html
+++ b/secondpage.html
@@ -15,7 +15,7 @@
 <!-- body of doc -->
 
 <body>
-    <div class="top">
+    <div class="secondpage-logo-section">
         <h2 class="Kevin">Kev<span>in</span></h2>
     </div>
     <nav>
@@ -28,9 +28,9 @@
         </ul>
     </nav>
     <!-- define section -->
-    <div class="top-section">
+    <div class="title-section">
         <!-- title of page -->
-        <h1>More About Me</h1>
+        <h1 class="title">More About Me</h1>
     </div>
 
     <!-- line break -->
