--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- 6: body of doc -->
 
-<body>
+<body class="index-body">
     <div class="logo-section">
         <h2 class="Kevin">Kev<span>in</span></h2>
     </div>
