--- a/secondpage.html
+++ b/secondpage.html
@@ -14,7 +14,7 @@
 
 <!-- body of doc -->
 
-<body>
+<body class="secondpage-body">
     <div class="secondpage-logo-section">
         <h2 class="Kevin">Kev<span>in</span></h2>
     </div>
@@ -105,7 +105,7 @@
                         Transferred to university. </div>
                 </div>
 
-                <div class="text-box">
+                <div class="text-box last-text-box">
                     <div class="date">2024 and Onwards</div>
                     <div class="description">
                         Continue my journey in the field of Computer Science. </div>
