--- a/index.html
+++ b/index.html
@@ -1,52 +1,36 @@
-<!-- 1: declare version of HTML used -->
 <!DOCTYPE html>
-<!-- 2: root of html doc -->
 <html lang="en">
 
-<!-- 3: header section -->
 
 <head>
-    <!-- 4: title -->
     <title>Welcome to My Page!</title>
-    <!-- 5: metadata -->
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
-<!-- 6: body of doc -->
-
-<body class="index-body">
-    <div class="logo-section">
+<body>
+    <div class="index-logo-section">
         <h2 class="Kevin">Kev<span>in</span></h2>
     </div>
 
     <nav>
-        <!-- 10: unordered list for hyperlink(s) -->
         <ul class="nav-bar">
             <li class="list">
-                <!-- 11, 12: display hyperlink(s) as element of the ul -->
                 <a href="secondpage.html" class="text"> More About Me</a>
             </li>
         </ul>
     </nav>
 
-    <!-- 7: define section -->
     <div class="title-section">
-        <!-- 8: name of page -->
         <h1 class="title">Welcome to My Page!</h1>
     </div>
 
-    <!-- 13: line break -->
     <br>
 
-    <!-- 15: main content of page -->
     <main>
-        <!-- 17: About Me section -->
         <div class="about-me-section">
             <div class="about-me-header-paragraph">
-                <!-- header -->
                 <h2>About Me</h2>
-                <!-- 18, 19: paragraph about me, bold name to emphasize -->
                 <p>
                     Welcome to my page! My name is <strong>Kevin Ponting</strong> and I am part Venezuelan
                     Filipino, and Japanese. Currently I am a third year computer science student at a
@@ -59,23 +43,17 @@
             <img class="pic-me" src="pic_of_me.jpg" alt="A picture of me.">
         </div>
 
-        <!-- Hobbies section -->
         <div class="hobbies-section">
             <figure>
                 <img src="basketball.jpg" alt="picture of a basketball" class="pic-basketball">
             </figure>
 
             <div class="hobbies-header-list-paragraph">
-                <!-- header -->
                 <h2>Hobbies</h2>
 
-                <!-- 20: tab that can be open and closed -->
                 <details class="hobbies-list-tab">
-                    <!-- 21: display name of tab -->
                     <summary>My List of Hobbies</summary>
-                    <!-- unordered list for hobbies -->
                     <ul class="hobbies-list">
-                        <!-- list of hobbies -->
                         <li>basketball</li>
                         <li>video games</li>
                         <li>lifting weights</li>
@@ -84,7 +62,6 @@
                     </ul>
                 </details>
 
-                <!-- paragraph about hobbies -->
                 <p>
                     Above are a list of my many hobbies! I have only been playing basketball since
                     middle school, but it is defintely my favorite hobby out of the list. Honestly, I
@@ -101,9 +78,7 @@
         </div>
     </main>
 
-    <!-- 22: footer section -->
     <footer>
-        <!-- creator -->
         <p>Created by: Kevin Ponting</p>
     </footer>
 </body>
