--- a/secondpage.html
+++ b/secondpage.html
@@ -4,7 +4,7 @@
 <head>
     <title>More About Me</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="secondpage.css">
 </head>
 
 <body class="secondpage-body">
