--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <title>Welcome to My Page!</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
